--- a/src/UI/Dialogs/Dialog.scss
+++ b/src/UI/Dialogs/Dialog.scss
@@ -1,18 +1,24 @@
 .dialog {
       background-color: #fff;
       border-radius: 5px;
-      max-width: 500px;
+      max-width: 530px;
       min-height: 300px;
       margin: 0 auto;
       padding: 30px;
+      overflow-y: scroll;
 }
 
 .dialog-backdrop {
-          position: fixed;
+      position: fixed;
       top: 0;
       bottom: 0;
       left: 0;
       right: 0;
       background-color: rgba(0,0,0,0.3);
       padding: 5px;
+}
+
+.modal-content {
+      overflow-y: scroll;
+      max-height: calc(100vh - 1.75rem);
 }
